# OskiHealth

./: .gitignore  ai_server.py  nlp_test.py  settings.gradle
ai_server/: nlp_test.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/glyph/oskihealth/: AnalyticsFragment.kt  AuthorisedRequest.kt  BotFragment.kt  ChatFragment.kt  ChatsListRecyclerViewAdapter.kt  Contact.kt  FirstFragment.kt  MainActivity.kt  Message.kt  MessagesFragment.kt  MessagesRecyclerViewAdapter.kt  OnboardingActivity.kt  OnboardingFragment1.kt  OnboardingFragment2.kt  SecondFragment.kt  StopItGetSomeHelp.kt  chatFragment.kt
app/src/main/java/com/glyph/oskihealth/placeholder/: PlaceholderContent.kt
app/src/main/res/drawable/: outline_login_24.xml  outline_medical_information_24.xml  outline_smart_toy_24.xml
app/src/main/res/layout/: activity_main.xml  activity_onboarding.xml  fragment_analytics.xml  fragment_bot.xml  fragment_chat_item.xml  fragment_chat_list.xml  fragment_first2.xml  fragment_messages_item.xml  fragment_messages_list.xml  fragment_second2.xml  fragment_stop_it_get_some_help.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
chat_server/: Cargo.toml  Rocket.toml  database_setup.txt  db  index.html
chat_server/src/: database.rs  main.rs
